# web/routes/user_routes.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	"github.com/Efren-Garza-Z/go-api-gemini/web/controllers"
+	"github.com/Efren-Garza-Z/go-api-gemini/web/middleware"
 	"github.com/gin-gonic/gin"
 )
 
@@ -10,8 +11,13 @@ func RegisterUserRoutes(r *gin.Engine, uc *controllers.UserController) {
 	{
 		users.POST("", uc.CreateUser)
 		users.GET("", uc.GetAll)
-		users.GET("/:id", uc.GetByID)
-		users.PUT("/:id", uc.Update)
-		users.DELETE("/:id", uc.Delete)
+
+		authenticated := users.Group("/")
+		authenticated.Use(middleware.AuthRequired()) // Aplicar el middleware a este grupo
+		{
+			authenticated.GET("/:id", uc.GetByID)
+			authenticated.PUT("/:id", uc.Update)
+			authenticated.DELETE("/:id", uc.Delete)
+		}
 	}
 }
